# scorus

./: .gitignore  Cargo.toml  README.md
examples/: arms_test.rs  bayes_network_gaussian.rs  eff_and_completeness.rs  graph.rs  graph_test1.rs  graph_test2.rs  hmc_smooth.rs  kmeans_test.rs  sample_bimodal.rs  sample_high_dim.rs  sample_rastrigin.rs  test_cg.rs  test_emcee.rs  test_hmc.rs  test_leapfrog.rs  test_nuts.rs  test_nuts_autodiff.rs  test_twalk.rs
src/: arms.rs  autodiff.rs  ensemble_sample.rs  functions.rs  init_ensemble.rs  lib.rs  main.rs  mcmc_errors.rs  ptsample.rs  utils.rs
src/basic/: mod.rs
src/coordinates/: mod.rs  rotation3d.rs  sphcoord.rs  vec2d.rs  vec3d.rs
src/graph/: graph.rs  graph_var.rs  mod.rs  node.rs  nodes.rs
src/healpix/: draw_map.rs  interp.rs  mod.rs  pix.rs  rotation.rs  utils.rs
src/integration/: adaptive_trapezoid.rs  integration_errors.rs  mod.rs  simpsons.rs
src/interpolation/: indexed_rtree.rs  linear1d.rs  mod.rs  sph_nn.rs  spline.rs
src/kmeans/: mod.rs
src/linear_space/: mod.rs  traits.rs  type_wrapper.rs  utils.rs
src/map_proj/: hammer.rs  mod.rs  mollweide.rs
src/mcmc/: arms.rs  ensemble_sample.rs  functions.rs  init_ensemble.rs  main.rs  mcmc_errors.rs  mcmc_vec.rs  mod.rs  nuts.rs  ptsample.rs  sampler_closure.rs  twalk.rs  utils.rs
src/mcmc/dream/: dream.rs  mod.rs  utils.rs
src/mcmc/graph/: graph.rs  graph_var.rs  mod.rs  node.rs  node_tag.rs  nodes.rs  utils.rs
src/opt/: bas_utils.rs  cg.rs  linmin.rs  mod.rs  opt_errors.rs  powell.rs  pso.rs  tolerance.rs
src/polynomial/: bernstein.rs  legendre.rs  mod.rs  polynomial.rs
src/rand_vec/: mod.rs  uniform_on_sphere.rs
src/space_search/: mod.rs  pdqselect.rs
src/sph_tessellation/: mod.rs
src/sphcoord/: mod.rs  sphcoord.rs  vec3d.rs
src/utils/: mod.rs  regulate.rs  types.rs
tests/: es_test1.rs  ptsample_test1.rs
(+3 files in other folders)
