[[test]]
name = 'ptsample_test1'
path = 'tests/ptsample_test1.rs'

[[test]]
name = 'es_test1'
path = 'tests/es_test1.rs'

[dependencies]
num-traits = '0.2.8'
quickersort = '3.0.1'
rand = '0.7.2'
rayon = '1.2.0'
special = '0.8.1'

[package]
authors = ['Gu Junhua <jhgu@nao.cas.cn>']
name = 'scorus'
version = '0.1.0'
[profile.dev]
debug = true
opt-level = 2
