[dependencies]
num = '0.4.0'
quickersort = '3.0.1'
rand = '0.8.5'
rand_distr = '0.4.3'
rayon = '1.5.1'

[dev-dependencies]
plotly = "0.7.0"

[package]
authors = ['Gu Junhua <jhgu@nao.cas.cn>']
edition = '2021'
name = 'scorus'
version = '0.1.0'
[profile.dev]
debug = true
opt-level = 2

[target."cfg(not (target_family = \"wasm\"))".dependencies]
special = '0.8.1'
rand = {version='0.8.5'}
rand_distr = '0.4.3'

[target."cfg(target_family = \"wasm\")".dependencies]
rand = {version='0.8.5'}
rand_distr = {version='0.4.3'}
getrandom={version='0.2.6', features=['js']}



[lib]
crate-type = ["cdylib", "lib"]