[dependencies]
num = '0.4.2'
rand = '0.8.5'
rand_distr = '0.4.3'
rayon = '1.10.0'

[dev-dependencies]
plotly = '0.7.0'

[lib]
crate-type = [
    'cdylib',
    'lib',
]

[package]
authors = ['Gu Junhua <jhgu@nao.cas.cn>']
edition = '2021'
name = 'scorus'
version = '0.1.0'
[profile.dev]
debug = true
opt-level = 2
[target."cfg(not (target_family = \"wasm\"))".dependencies]
rand_distr = '0.4.3'
special = '0.8.1'

[target."cfg(not (target_family = \"wasm\"))".dependencies.rand]
version = '0.8.5'
[target."cfg(target_family = \"wasm\")".dependencies.getrandom]
features = ['js']
version = '0.2.6'

[target."cfg(target_family = \"wasm\")".dependencies.rand]
version = '0.8.5'

[target."cfg(target_family = \"wasm\")".dependencies.rand_distr]
version = '0.4.3'
